# MandeyeLedTimestamp

./: readme.md
ImageDecode/: CMakeLists.txt  RunTest.sh  RunTestGrey.sh  bits.json  clicky.py  data.json  main.cpp
ImageDecode/example_data/: bits.json
ImageDecode/example_data_gray/: bits.json
TimestampToLed/: .gitignore  CMakeLists.txt  TimestampToLed.cpp  gray.h
UcCode/: platformio.ini
UcCode/include/: gray.hpp
UcCode/src/: gray.cpp  main.cpp
UcCode/test/: test_gray_code.cpp
